# XM_Ini

./: .gitignore  CMakeCache.txt  Common.cc  Common.h  ExceptionReport.cpp  ExceptionReport.h  README.md  Wxm_IniOperation.sln  Wxm_IniOperation.vcproj  XM_IniFile.cc  cmake_install.cmake
C/: CMakeLists.txt  Common.c  Common.h  XM_IniFile.c  XM_IniFile.h
C++/: CMakeLists.txt  Common.cc  XMIniFile.h
